--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,12 @@
 addons:
-  postgresql: 10.5
+  postgresql: "10"
+  apt:
+    packages:
+    - postgresql-10
+    - postgresql-client-10
+env:
+  global:
+  - PGPORT=5433
 language: ruby
 rvm:
   - 2.5.1
