--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,10 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+
+# Ignore local docker images and configuration
+.DS_Store
+Dockerfile
+config/.DS_Store
+docker-compose.yaml
