--- a/config/database.yml
+++ b/config/database.yml
@@ -20,6 +20,9 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  host: umbo-db
+  username: postgres
+  password:
 
 development:
   <<: *default
@@ -83,3 +86,5 @@ production:
   database: umbo_production
   username: umbo
   password: <%= ENV['UMBO_DATABASE_PASSWORD'] %>
+
+
